Add hot-cold storage and MEGA cold pool
